Instrument API calls and methods differently